packages/styles/src/variables/components/_form-validation.scss
@use './../color';
@use './../spacing';
@use './../type';
@use './../components/button';
@use './../components/forms';

// Bootstrap variables
$form-feedback-margin-top: 0 !default;
$form-feedback-font-size: type.$font-size-12 !default;
$form-feedback-valid-color: color.$gray-60 !default;
$form-feedback-invalid-color: color.$error !default;
$form-feedback-icon-valid: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='24pt' height='24pt' viewBox='0 0 24 24' version='1.1'%3E%3Cg id='surface1'%3E%3Cpath style=' stroke:none;fill-rule:nonzero;fill:rgb(0%25,50.588235%25,22.745098%25);fill-opacity:1;' d='M 9.5 18.398438 L 3.800781 12.699219 L 5.199219 11.300781 L 9.5 15.597656 L 18.800781 6.300781 L 20.199219 7.699219 Z M 9.5 18.398438 '/%3E%3C/g%3E%3C/svg%3E%0A") !default;
$form-feedback-icon-invalid: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='24pt' height='24pt' viewBox='0 0 24 24' version='1.1'%3E%3Cg id='surface1'%3E%3Cpath style=' stroke:none;fill-rule:nonzero;fill:rgb(64.705882%25,9.019608%25,15.686275%25);fill-opacity:1;' d='M 11 3 L 13 3 L 13 17 L 11 17 Z M 11 3 '/%3E%3Cpath style=' stroke:none;fill-rule:nonzero;fill:rgb(64.705882%25,9.019608%25,15.686275%25);fill-opacity:1;' d='M 11 19 L 13 19 L 13 21 L 11 21 Z M 11 19 '/%3E%3C/g%3E%3C/svg%3E%0A") !default;

// Design System custom variables
$form-feedback-padding-x: button.$input-btn-padding-x !default;
$form-feedback-padding-y: 0.5 * button.$input-btn-padding-x !default;
$form-feedback-icon-size: 2rem !default; // Equals 24pt [svg-size]
$form-feedback-icon-offset: spacing.$size-mini !default;
$form-feedback-valid-bg: color.$success !default;
$form-feedback-valid-text: color.$white !default;
$form-feedback-invalid-bg: color.$error !default;
$form-feedback-invalid-text: color.$white !default;
$form-feedback-custom-color: color.$success !default;
$form-feedback-custom-bg: color.$success !default;
$form-feedback-invalid-box-shadow: 0 0 0 forms.$input-focus-width
  rgba($form-feedback-invalid-color, 0.25) !default;
$form-feedback-valid-box-shadow: 0 0 0 forms.$input-focus-width
rgba($form-feedback-valid-color, 0.25) !default;
$form-feedback-custom-text: color.$white !default;
$form-feedback-custom-box-shadow: 0 0 0 0.2rem rgba($form-feedback-custom-color, 0.25) !default;

